[project]
name = "medevalkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "flash-attn>=2.8.3",
    "google-genai>=1.60.0",
    "grpcio>=1.62.1",
    "hf-transfer>=0.1.9",
    "mathruler>=0.1.0",
    "nltk>=3.9.2",
    "numpy<2.0.0",
    "optree>=0.13.0",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pre-commit>=4.5.1",
    "py-spy>=0.4.1",
    "pyarrow>=15.0.0",
    "pydash>=8.0.6",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qwen-vl-utils>=0.0.14",
    "rouge>=1.0.1",
    "ruff>=0.14.14",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers[hf-xet]>=5.0.0",
    "vllm==0.11.0",
    "yapf>=0.43.0",
]
